--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   provider: ^3.2.0
   uuid: ^2.0.4
+  division: ^0.8.7+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
